I think the issue happens in <hr> html element. It is too large

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -135,4 +135,7 @@ body {
     .prose li > p {
         @apply inline;
     }
+    .prose hr {
+        @apply my-2;
+    }
 }
